--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,7 @@
     var serviceWorkerVersion = 20230220;
   </script>
   <script src="flutter.js" defer></script>
+  <script defer data-domain="aeweb.archethic.net" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body>
