--- a/web/index.html
+++ b/web/index.html
@@ -10,10 +10,11 @@
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="aeweb">
+  <meta name="apple-mobile-web-app-title" content="AEWeb">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="icon" type="image/png" href="favicon.png">
 
   <title>AEWeb</title>
   <link rel="manifest" href="manifest.json">
