🚚 Rename aeWeb to aeHosting

--- a/web/index.html
+++ b/web/index.html
@@ -6,17 +6,17 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="AEWeb">
+  <meta name="description" content="aeHosting">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="AEWeb">
+  <meta name="apple-mobile-web-app-title" content="aeHosting">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <title>AEWeb</title>
+  <title>aeHosting</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
